<resources>
    <string name="app_name">GroupTaskAndroid</string>
    <string name="username">Username</string>
    <string name="insert_username">Insert Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="insert_password">Insert Password</string>
    <string name="logging_in">Logging In...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log Out</string>
    <string name="add_task_title">ADD TASK</string>
    <string name="add_task_name">Name</string>
    <string name="add_task_desc">Description</string>
    <string name="add_task_inCharge">In Charge</string>
    <string name="add_task_dueDate">Due Date</string>
    <string name="group_detail_members">View Members</string>
</resources>